# skillctl

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: CONFIG.md
examples/: config.example.toml
skillctl/: __init__.py  cli.py  config.py  frontmatter.py  integrity.py  records.py  report.py  scan.py  usage.py
tests/: test_smoke.py
